--- a/Roomie/Roomie/Post.storyboard
+++ b/Roomie/Roomie/Post.storyboard
@@ -77,6 +77,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Rg7-Nh-3g1" firstAttribute="leading" secondItem="p8y-xd-bgR" secondAttribute="leading" constant="8" id="2sZ-6P-ghN"/>
                             <constraint firstItem="521-Fq-d6h" firstAttribute="top" secondItem="Rg7-Nh-3g1" secondAttribute="bottom" constant="10" id="8bI-7W-c3y"/>
