--- a/Roomie/Roomie/Post.storyboard
+++ b/Roomie/Roomie/Post.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,29 +22,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Rg7-Nh-3g1">
-                                <rect key="frame" x="8" y="578" width="359" height="30"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hzQ-AX-L2W">
-                                        <rect key="frame" x="0.0" y="0.0" width="318" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hyg-QP-WA2">
-                                        <rect key="frame" x="323" y="0.0" width="36" height="30"/>
-                                        <state key="normal" title="Send"/>
-                                        <connections>
-                                            <action selector="sendButtonTapped:" destination="uOi-8u-Ew1" eventType="touchUpInside" id="ia8-QB-boB"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="3yd-Et-vZA"/>
-                                </constraints>
-                            </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aaL-q6-3ue">
-                                <rect key="frame" x="0.0" y="64" width="375" height="506"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="508"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" textLabel="luq-C2-IRs" detailTextLabel="uOA-2e-9fB" style="IBUITableViewCellStyleValue1" id="h8i-iE-Be8">
@@ -76,16 +56,50 @@
                                     <outlet property="delegate" destination="uOi-8u-Ew1" id="Gxh-xz-TyC"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bh7-oY-CWL">
+                                <rect key="frame" x="0.0" y="572" width="375" height="46"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Rg7-Nh-3g1">
+                                        <rect key="frame" x="8" y="8" width="359" height="30"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hzQ-AX-L2W">
+                                                <rect key="frame" x="0.0" y="0.0" width="318" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hyg-QP-WA2">
+                                                <rect key="frame" x="323" y="0.0" width="36" height="30"/>
+                                                <state key="normal" title="Send"/>
+                                                <connections>
+                                                    <action selector="sendButtonTapped:" destination="uOi-8u-Ew1" eventType="touchUpInside" id="ia8-QB-boB"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="M7T-KR-qhT"/>
+                                            <constraint firstAttribute="width" secondItem="Rg7-Nh-3g1" secondAttribute="height" multiplier="359:30" id="cyM-aU-8hb"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Rg7-Nh-3g1" secondAttribute="trailing" constant="8" id="Jaf-jW-AWH"/>
+                                    <constraint firstAttribute="bottom" secondItem="Rg7-Nh-3g1" secondAttribute="bottom" constant="8" id="VpL-VF-Fo1"/>
+                                    <constraint firstItem="Rg7-Nh-3g1" firstAttribute="top" secondItem="Bh7-oY-CWL" secondAttribute="top" constant="8" id="eEG-Rl-B77"/>
+                                    <constraint firstItem="Rg7-Nh-3g1" firstAttribute="leading" secondItem="Bh7-oY-CWL" secondAttribute="leading" constant="8" id="veV-E1-JgH"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Rg7-Nh-3g1" firstAttribute="leading" secondItem="p8y-xd-bgR" secondAttribute="leading" constant="8" id="2sZ-6P-ghN"/>
-                            <constraint firstItem="521-Fq-d6h" firstAttribute="top" secondItem="Rg7-Nh-3g1" secondAttribute="bottom" constant="10" id="8bI-7W-c3y"/>
+                            <constraint firstAttribute="trailing" secondItem="Bh7-oY-CWL" secondAttribute="trailing" id="BvC-3G-X93"/>
                             <constraint firstItem="aaL-q6-3ue" firstAttribute="leading" secondItem="p8y-xd-bgR" secondAttribute="leading" id="Rv7-NO-SUH"/>
-                            <constraint firstAttribute="trailing" secondItem="Rg7-Nh-3g1" secondAttribute="trailing" constant="8" id="Sgv-fl-8o6"/>
                             <constraint firstItem="aaL-q6-3ue" firstAttribute="top" secondItem="uEd-hf-hD1" secondAttribute="bottom" id="Vom-mN-uTb"/>
-                            <constraint firstItem="Rg7-Nh-3g1" firstAttribute="top" secondItem="aaL-q6-3ue" secondAttribute="bottom" constant="8" id="can-K1-54A"/>
                             <constraint firstAttribute="trailing" secondItem="aaL-q6-3ue" secondAttribute="trailing" id="geU-JS-CoG"/>
+                            <constraint firstItem="Bh7-oY-CWL" firstAttribute="top" secondItem="aaL-q6-3ue" secondAttribute="bottom" id="qSH-zd-8gG"/>
+                            <constraint firstItem="521-Fq-d6h" firstAttribute="top" secondItem="Bh7-oY-CWL" secondAttribute="bottom" id="yDl-7C-Sf6"/>
+                            <constraint firstItem="Bh7-oY-CWL" firstAttribute="leading" secondItem="p8y-xd-bgR" secondAttribute="leading" id="yks-GH-4Js"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Messages" id="H1Y-qJ-zWr"/>
@@ -95,7 +109,8 @@
                         <outlet property="postStackView" destination="Rg7-Nh-3g1" id="aCq-8I-eyJ"/>
                         <outlet property="postTextField" destination="hzQ-AX-L2W" id="t1S-gH-kpy"/>
                         <outlet property="sendButton" destination="Hyg-QP-WA2" id="aKW-NV-T2X"/>
-                        <outlet property="stackViewBottomConstraint" destination="8bI-7W-c3y" id="FCF-hh-yuq"/>
+                        <outlet property="stackViewsView" destination="Bh7-oY-CWL" id="v9o-5g-S0f"/>
+                        <outlet property="viewBottomConstraint" destination="yDl-7C-Sf6" id="CuP-RH-c5j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3vk-eo-fhU" userLabel="First Responder" sceneMemberID="firstResponder"/>
